--- a/setup-demo.yaml
+++ b/setup-demo.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: monitoring
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -25,9 +30,11 @@ metadata:
   name: nginx-demo
   namespace: monitoring
 spec:
+  type: NodePort
   selector:
     app: nginx-demo
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
+      nodePort: 30002
